# derive-discriminant

./: Cargo.toml  README.md
src/: lib.rs
tests/: macro.rs
