[package]
name = "derive-discriminant"
version = "0.1.1"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
description = "A derive macro for enum discriminants"
license = "MIT"
repository = "https://github.com/andrewgazelka/derive-discriminant"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.13", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
